# MFfCUAVSLAM

./: .gitignore  README.md
catkin_ws/src/helper/include/helper/: CMakeLists.txt  imagesampler.h
catkin_ws/src/helper/macslam_msgs/msg/: macMap.msg  macMapPoint.msg  mach2DGrid.msg
catkin_ws/src/helper/src/: imagesampler_node.cpp  republisher.cpp  viewer_node.cpp
catkin_ws/src/macslam/: CMakeLists.txt  package.xml
catkin_ws/src/macslam/conf/: bluefox.yaml  mapfusion.rviz
catkin_ws/src/macslam/include/macslam/: Database.h  Datatypes.h  Initializer.h  KeyFrame.h  LoopFinder.h  Map.h  MapMatcher.h  MapMerger.h  Mapping.h  ORBVocabulary.h  ORBextractor.h  Optimizer.h  Sim3Solver.h  Tracking.h  Viewer.h
catkin_ws/src/macslam/launch/: macServer.launch  mactf_ex2.launch  repub.launch  system.launch
catkin_ws/src/macslam/src/: KeyFrame.cpp  LoopFinder.cpp  MapMatcher.cpp  MapMerger.cpp  MapPoint.cpp  ORBmatcher.cpp  Optimizer.cpp  PnPSolver.cpp  Tracking.cpp
catkin_ws/src/macslam/src/client/: ClientNode.cpp  ClientSystem.cpp
catkin_ws/src/macslam/src/server/: ServerSystem.cpp
catkin_ws/src/record_vicon/: CMakeLists.txt  package.xml
catkin_ws/src/record_vicon/src/: record_vicon.py
catkin_ws/src/retime_messages/: CMakeLists.txt  package.xml
catkin_ws/src/retime_messages/src/: retime_messages.py
catkin_ws/src/v4rl_mcpslam-mapfusion/helper/: CMakeLists.txt  package.xml
catkin_ws/src/v4rl_mcpslam-mapfusion/helper/include/helper/: estd.h  republisher.h  viewer.h
catkin_ws/src/v4rl_mcpslam-mapfusion/helper/launch/: imagesampler.launch  imagesampler_ex1.launch  republisher.launch  viewer.launch
catkin_ws/src/v4rl_mcpslam-mapfusion/helper/src/: imagesampler.cpp  republisher.cpp  republisher_node.cpp  test.cpp  viewer.cpp
catkin_ws/src/v4rl_mcpslam-mapfusion/macslam/: CMakeLists.txt
catkin_ws/src/v4rl_mcpslam-mapfusion/macslam/conf/: vi_equi.yaml
catkin_ws/src/v4rl_mcpslam-mapfusion/macslam/include/macslam/: CMakeLists.txt  CentralControl.h  ClientHandler.h  Communicator.h  Converter.h  Datatypes.h  Frame.h  KeyFrame.h  MapMatcher.h  MapMerger.h  MapPoint.h  ORBmatcher.h  Optimizer.h  PnPSolver.h
catkin_ws/src/v4rl_mcpslam-mapfusion/macslam/include/macslam/client/: ClientSystem.h
catkin_ws/src/v4rl_mcpslam-mapfusion/macslam/include/macslam/server/: ServerSystem.h
catkin_ws/src/v4rl_mcpslam-mapfusion/macslam/launch/: macClient0.launch  macClient1.launch  macServer.launch  mactf_hh.launch  playtworosbags.launch  repub.launch
catkin_ws/src/v4rl_mcpslam-mapfusion/macslam/scripts/: record_c0out.sh  record_c1out.sh
catkin_ws/src/v4rl_mcpslam-mapfusion/macslam/src/: ClientHandler.cpp  Communicator.cpp  Converter.cc  Database.cpp  Frame.cpp  Initializer.cpp  KeyFrame.cpp  LoopFinder.cpp  Map.cpp  MapMatcher.cpp  MapMerger.cpp  MapPoint.cpp  Mapping.cpp  ORBextractor.cpp  Optimizer.cpp  Sim3Solver.cpp  Viewer.cpp
catkin_ws/src/v4rl_mcpslam-mapfusion/macslam/src/server/: ServerNode.cpp  ServerSystem.cpp
catkin_ws/src/v4rl_mcpslam-mapfusion/macslam_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/v4rl_mcpslam-mapfusion/macslam_msgs/msg/: macKeyFrame.msg  machCvKeyPoint.msg  machGridCols.msg  machGridEntries.msg
evaluation/: align.py  edges_verteces.ods  estimate_offset.py  evaluation.ods  evaluation.py  evaluation_marker_cam_transf.ods  evaluation_old.ods  evaluation_seperate_alignment.ods  export_0_m10_skf10_0.txt  export_0_m10_skf10_1.txt  export_0_m10_skf10_2.txt  export_0_m10_skf5_1.txt  export_0_m10_skf5_2.txt  export_0_m15_skf10_1.txt  export_0_m15_skf10_2.txt  export_0_m15_skf5_0.txt  export_0_m15_skf5_1.txt  export_0_m15_skf5_2.txt  export_0_m1_skf0_2.txt  export_0_m3_skf0_0.txt  export_0_m3_skf10_0.txt  export_0_m3_skf10_1.txt  export_0_m3_skf20_1.txt  export_0_m3_skf20_2.txt  export_0_m3_skf5_0.txt  export_0_m3_skf5_1.txt  export_0_m3_skf5_2.txt  export_0_m5_skf0_0.txt  export_0_m5_skf10_1.txt  export_0_m5_skf20_0.txt  export_0_m5_skf20_1.txt  export_0_m5_skf20_2.txt  export_0_m5_skf30_0.txt  export_0_m5_skf30_1.txt  export_0_m5_skf40_0.txt  export_0_m5_skf5_1.txt  export_0_m5_skf5_2.txt  export_0_m7_skf10_0.txt  export_0_m7_skf20_1.txt  export_1_m10_skf10_1.txt  (+203 more)
evaluation/scripts/: evaluation.py  evaluation_with_offset_estimate.py
presentation/: pdfpc-commands.sty  presentation.pdfpc  presentation.tex  presentation_extended.tex
presentation/gfx/: eth_logo_kurz_pos.eps
progressreports/pr1/: pr1.aux  pr1.nav  pr1.out  pr1.tex  pr1.toc
progressreports/pr2/: pr2.tex
progressreports/pr3/: pr3.tex
progressreports/pr4/: pr4.tex
progressreports/pr5/: pr5.tex
projectdescription/: projectdescription.tex
report/: report.tex
report/bibliography/: references.bib
report/chapters/: abstract.tex  acronyms.tex  approach.tex  conclusion_outlook.tex  culling.tex  declaration.tex  discussion.tex  evaluation.tex  experimental_results.tex  introduction.tex  map_merging.tex  optimization.tex  preface.tex  related_work.tex  results.tex
report/preambles/: v4rl_preamble.tex
