<?xml version="1.0"?>
<package>
  <name>helper</name>
  <version>0.5.0</version>
  <description>ETHZ V4RL Joint SLAM helper package</description>

  <maintainer email="pschmuck@ethz.ch"> </maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
<!--  <build_depend>mcpslam_msgs</build_depend> -->

<!--  <run_depend>cmake_modules</run_depend> -->
<!--  <run_depend>mcpslam_msgs</run_depend> -->



  <export>
  </export>
</package>
