<?xml version="1.0"?>
<package>
  <name>macslam_msgs</name>
  <version>0.5.0</version>
  <description>Message(s) for v4rl MAC-SLAM package</description>

   <maintainer email="pschmuck@ethz.ch">pschmuck</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
